[DG2] Intel level zero compute is broken for my Intel Arc A750LE with linux kernel version 6.6.27 and above
The compute hangs with no error on the front facing application using level-zero. In the system logs however, I can see this error:
kernel: Fence expiration time out i915-0000:03:00.0:server[5816]:14c!
The app gets timed out (probably) and continuously consume CPU usage before being terminated forcefully.
So far, I am not able to find out the cause or proper logs with the exception of the above entry in the journald. I reported this issue in level-zero repository as well. The only thing I am suspecting is this commit.
Also, I noticed that the number of "physical engines" of "unknown" in intel_gpu_top
has been reduced to 1 from 4. Not sure if that matters.